--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "04fb5128",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "f5274efc",
    "metadata": {},
    "outputs": [],
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e7c241c4",
+   "id": "5a0ce346",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eff599a8",
+   "id": "660f668c",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da53db37",
+   "id": "db329ff0",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "48f69c2b",
+   "id": "f6fa9cb2",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4f5abe28",
+   "id": "3f2ae5ae",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7c8eb31a",
+   "id": "d476b12d",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "173bb797",
+   "id": "ae23e3d1",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "77992025",
+   "id": "511ef91a",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b299eeb8",
+   "id": "a2a3dd0b",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2dadda1c",
+   "id": "29c96302",
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fedff73b",
+   "id": "0ff6f5c6",
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "698a96e0",
+   "id": "23a7afa7",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "97da7ebe",
+   "id": "c1ecf22f",
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe90a75",
+   "id": "549e0313",
    "metadata": {},
    "source": [
     "## Feature Selection "
@@ -1724,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ae7b3389",
+   "id": "2feecb28",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d8ac68cc",
+   "id": "8b43c576",
    "metadata": {},
    "outputs": [
     {
@@ -1921,8 +1921,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "9b96987a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_1.to_csv('../data/scaled_data.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cb04de5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(569, 16)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9ea5bd18",
+   "id": "4b6fd233",
    "metadata": {},
    "outputs": [],
    "source": []
